--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">number1: +16172022146</a></li>
-    <li><a href="#/view2">number2</a></li>
+    <li><a href="#/msg">SMS</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -35,7 +34,6 @@
   <script type="text/javascript" src="bower_components/angular-socket-io/socket.min.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
 
 
   <script src="components/version/version.js"></script>
