--- a/public/index.html
+++ b/public/index.html
@@ -23,16 +23,16 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="javascripts/autolink-min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="app.js"></script>
   <script src="view/number.js"></script>
 
 
   <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
-  <script>
 
-  </script>
 
 </body>
 </html>
