--- a/public/login.html
+++ b/public/login.html
@@ -133,6 +133,8 @@ limitations under the License.
                     document.getElementById('quickstart-sign-in').textContent = 'Sign out';
                     document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
                     // [END_EXCLUDE]
+                    window.location.replace("/messages");
+
                 } else {
                     // User is signed out.
                     // [START_EXCLUDE]
