--- a/public/messages.html
+++ b/public/messages.html
@@ -9,16 +9,25 @@
   <title>SMSdruid</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
+
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet"; href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
+<!--  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="app.css">-->
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="apple-touch-icon" href="/images/favicon.ico">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
 
-  <div ng-view></div>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+
+    <div ng-view></div>
+
+  </div>
+</div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -27,9 +36,9 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.js"></script>
   <script src="app.js"></script>
   <script src="view/number.js"></script>
-
 
   <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
 
